--- a/footer.css
+++ b/footer.css
@@ -3,6 +3,7 @@ footer {
     color: var(--light-color);
     background-color: var(--dark-green);
     border-top: 2px solid var(--medium-green);
+    position: relative;
 }
 footer .content-container {
     padding: 15px 0px;
@@ -88,4 +89,20 @@ footer .fab:hover {
 }
 .f-nav-list a:hover {
     color: var(--light-color);
+}
+footer h6 {
+    color: rgba(255, 255, 255, .8);
+    font-size: .75rem;
+    margin: 0;
+    padding-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+    footer h6 {
+        text-align: right;
+        position: absolute;
+        bottom: 15px;
+        right: 50px;
+        padding-bottom: 0;
+    }
 }
