--- a/footer.css
+++ b/footer.css
@@ -26,8 +26,10 @@ footer .content-container {
 }
 
 .footer-right {
-    min-width: 140px;
+    min-width: 120px;
     border-left: 2px solid rgb(255, 255, 255, .3);
+    display: flex;
+    align-items: center;
 }
 footer h5, footer p {
     margin: 10px 0px;
@@ -39,6 +41,7 @@ footer p {
 footer h5 {
     font-size: 3rem;
     font-family: 'Chakra Petch', sans-serif;
+    margin-top: 0;
 }
 footer .fab {
     opacity: .7;
@@ -54,7 +57,13 @@ footer .fab:hover {
     filter: brightness(1.3);
 }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
+    .footer-left {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
     footer .content-container {
         padding: 10px 0px;
     }
@@ -97,7 +106,7 @@ footer h6 {
     padding-bottom: 20px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     footer h6 {
         text-align: right;
         position: absolute;
