--- a/src/scss/home-sections/_schedule.scss
+++ b/src/scss/home-sections/_schedule.scss
@@ -1,7 +1,6 @@
 .schedule {
     height: auto !important;
     overflow: hidden;
-    background-image: url(./IMG_0360.jpg);
 }
 .schedule .content-container {
     background-color: transparent;
@@ -17,7 +16,7 @@
     font-family: 'Chakra Petch', sans-serif;
 }
 .schedule .overlay {
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba($dark, .7);
 }
 @media (min-width: 684px) {
     .calendly-inline-widget {
