--- a/src/scss/home-sections/_play-train-cards.scss
+++ b/src/scss/home-sections/_play-train-cards.scss
@@ -45,13 +45,13 @@
     position: relative;
     width: 100%;
     height: 450px;
-    background: var(--light-gray);
+    background: $gray;
     overflow: hidden;
-    border: 2px solid rgba(255, 255, 255, .5);
+    border: 2px solid rgba($light, .5);
 }
 .card-container:not(.popupOpened) .card:hover {
-    border: 2px solid rgba(255, 255, 255, .75);
-    box-shadow: 5px 2px 25px 10px rgb(255 255 255 / 7%);
+    border: 2px solid rgba($light, .75);
+    box-shadow: 5px 2px 25px 10px rgba($light, .07);
 }
 .card1, .card3 {
     border-radius: 0 35px 35px 0;
@@ -76,7 +76,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--medium-green);
+    background: $secondary;
     clip-path: circle(51% at 50% 0%);
     transition: all 0.5s ease-in-out;
     opacity: .5;
@@ -219,25 +219,25 @@
 }
 .card .contentBx .gt-btn {
     padding: 10px 20px;
-    background-color: var(--light-green);
-    box-shadow: 0px 4px var(--light-green-shadow);
-    border: 2px solid var(--light-green);
+    background-color: $secondary-light;
+    box-shadow: 0px 4px $secondary-light-shadow;
+    border: 2px solid $secondary-light;
     border-radius: 4px;
     transition: all .2s ease;
 }
 .card .contentBx .gt-btn:hover {
     box-shadow: 0px 0px rgb(0, 0, 0, 0);
     transform: translateY(4px);
-    background-color: var(--dark-green);
-    border: 2px solid var(--light-green);
-    color:rgb(255, 255, 255, 1);
+    background-color: $primary;
+    border: 2px solid $secondary-light;
+    color: $light;
     opacity: .6;
 }
 .card .contentBx .gt-btn a {
     color: white;
 }
 .card .contentBx .gt-btn:hover a {
-    color: rgb(255, 255, 255, .6);
+    color: rgba($light, .6);
 }
 .card:hover .contentBx .gt-btn {
     transition: background-color .3s, color .3s, box-shadow .3s, transform .3s;
@@ -259,9 +259,9 @@
 opacity: 0;
 width: 100%;
 height: 450px;
-border: 2px solid rgba(255, 255, 255, .4);
-background-color: var(--light-gray);
-color: var(--light-color);
+border: 2px solid rgba($light, .4);
+background-color: $gray;
+color: $light;
 text-align: center;
 padding: 8px 0;
 position: absolute;
@@ -360,3 +360,8 @@ transition: opacity .3s ease-in-out;
         border-radius: 0 35px 35px 0;
     }
 }
+
+
+.pt-cards .scroll-content {
+    transition-delay: .3s;
+  }
