--- a/src/scss/home-sections/_tab-divider.scss
+++ b/src/scss/home-sections/_tab-divider.scss
@@ -116,10 +116,10 @@
     padding: 25px 10px;
     border-radius: 5px;
     font-size: 18px;
-    background-color: var(--light-green);
-    box-shadow: 0px 4px var(--light-green-shadow);
+    background-color: $secondary-light;
+    box-shadow: 0px 4px $secondary-light-shadow;
     border: none;
-    color: var(--light-color);
+    color: $light;
     outline: none;
     cursor: pointer;
     margin-top: 0px;
@@ -134,7 +134,7 @@
     position: absolute;
     right: 0;
     top: 0px;
-    border-right: solid 1px var(--dark-green);
+    border-right: solid 1px $primary;
 }
 .divider .tab:nth-child(2) {
     border-radius: 0;
@@ -145,22 +145,22 @@
     position: absolute;
     right: 0;
     top: 0px;
-    border-right: solid 1px var(--dark-green);
+    border-right: solid 1px $primary;
 }
 .divider .tab:last-child {
     border-radius: 0 5px 0 0;
     border-right: 0px;
 }
 .divider .tab:active {
-    background: var(--dark-green);
-    box-shadow: 0px 4px var(--dark-green);
+    background: $primary;
+    box-shadow: 0px 4px $primary;
     color:rgb(255, 255, 255, .65);
 }
 .divider .tab-content {
     flex-basis: 66.6666%;
     padding: 20px;
     font-size: .8rem;
-    background-color: var(--light-gray);
+    background-color: $gray;
     border-radius: 0 0 10px 10px;
     position: absolute;
     top: 90px;
@@ -186,8 +186,8 @@
     margin-bottom: 0px;
 }
 .divider .tab--active {
-    background: var(--dark-green);
-    box-shadow: 0px 1px var(--dark-green);
+    background: $primary;
+    box-shadow: 0px 1px $primary;
     transform: translateY(3px);
     color:rgb(255, 255, 255, .5);
     border-right: 1px solid rgba(255, 255, 255, .65);
