--- a/src/scss/home-sections/_play-train-cards.scss
+++ b/src/scss/home-sections/_play-train-cards.scss
@@ -226,7 +226,7 @@
     transition: all .2s ease;
 }
 .card .contentBx .gt-btn:hover {
-    box-shadow: 0px 0px rgb(0, 0, 0, 0);
+    box-shadow: 0px 0px transparent;
     transform: translateY(4px);
     background-color: $primary;
     border: 2px solid $secondary-light;
@@ -248,98 +248,90 @@
 
 /* Popup container */
 .popup {
-    position: relative;
     display: inline-block;
+    position: relative;
     cursor: pointer;
     opacity: 1;
-  }
-  
-/* The actual popup (appears on top) */
-.popup .popuptext {
-opacity: 0;
-width: 100%;
-height: 450px;
-border: 2px solid rgba($light, .4);
-background-color: $gray;
-color: $light;
-text-align: center;
-padding: 8px 0;
-position: absolute;
-z-index: 10000000;
-bottom: 50%;
-left: 50%;
-transform: translate(-50%, 50%);
-transition: opacity .3s ease-in-out;
-pointer-events: none;
-overflow: hidden;
-}
 
-.popuptext h3 {
-    font-size: 2.5rem;
-    margin: 20px;
-    font-family: 'Chakra Petch', sans-serif;
-}
-.popuptext p {
-    text-align: left;
-    padding: 20px 30px;
-}
-.popuptext ul {
-    text-align: left;
-    font-size: 1.2rem;
-    padding: 0 10px 0 30px;
-    list-style-type: square;
-}
+    .popuptext {
+        opacity: 0;
+        width: 100%;
+        height: 450px;
+        border: 2px solid rgba($light, .4);
+        background-color: $gray;
+        color: $light;
+        text-align: center;
+        padding: 8px 0;
+        position: absolute;
+        z-index: 10000000;
+        bottom: 50%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        transition: opacity .3s ease-in-out;
+        pointer-events: none;
+        overflow: hidden;
+    
+        h3 {
+            font-size: 2.5rem;
+            margin: 20px;
+            font-family: $primary-font;
+        }
+    
+        p {
+            text-align: left;
+            padding: 20px 30px;
+        }
+    
+        ul {
+            text-align: left;
+            font-size: 1.2rem;
+            padding: 0 10px 0 30px;
+            list-style-type: square;
+        
+            @media ($mobile-large) {
+                font-size: 1.4rem;
+                padding: 0 20px 0 40px;
+            }
+        
+            @media ($tablet) {
+                font-size: 1rem;
+            }
+        
+            @media (min-width: 848px) {
+                font-size: 1.1rem;
+            }
+        
+            @media ($laptop) {
+                font-size: 1.2rem;
+            }
+        
+            @media (min-width: 1400px) {
+                font-size: 1.4rem;
+            }
+        
+            @media (min-width: 1600px) {
+                font-size: 1.5rem;
+            }
+        }
+    
+        li {
+            margin: 10px 0;
+        }
+    }
 
-@media (min-width: 568px) {
-    .popuptext ul {
-        font-size: 1.4rem;
-        padding: 0 20px 0 40px;
+    .show {
+        opacity: .98;
+        transition: opacity .3s ease-in-out;
     }
 }
 
-@media (min-width: 768px) {
-    .popuptext ul {
-        font-size: 1rem;
-    }
-}
-
-@media (min-width: 848px) {
-    .popuptext ul {
-        font-size: 1.1rem;
-    }
-}
-
-@media (min-width: 992px) {
-    .popuptext ul {
-        font-size: 1.2rem;
-    }
-}
-
-@media (min-width: 1400px) {
-    .popuptext ul {
-        font-size: 1.4rem;
-    }
-}
-
-@media (min-width: 1600px) {
-    .popuptext ul {
-        font-size: 1.5rem;
-    }
-}
-
-.popuptext li {
-    margin: 10px 0;
-}
 
 .popupOpened .card {
-    border: 2px solid rgba(255, 255, 255, .75);
-    box-shadow: 5px 2px 25px 10px rgb(255 255 255 / 7%);
+    border: 2px solid rgba($light, .75);
+    // box-shadow: 5px 2px 25px 10px rgba($light, .7);
 }
 /* Toggle this class when clicking on the popup container (hide and show the popup) */
-.popup .show {
-opacity: .98;
-transition: opacity .3s ease-in-out;
-}
+
 
 @media (max-width: 767px) {
     .card-container1 .popuptext, .card-container3 .popuptext {
