Adjusting play train for screens

--- a/src/scss/home-sections/_play-train-cards.scss
+++ b/src/scss/home-sections/_play-train-cards.scss
@@ -1,359 +1,379 @@
-
-
-
 /* PRACTICE AND TRAINING CARDS */
 .play-train-cards {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    margin-top: 50px;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  margin-top: 50px;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
 
 .card-container {
-    position: relative;
-    width: 90%;
-    margin-bottom: 10px;
+  position: relative;
+  width: 90%;
+  margin-bottom: 10px;
 }
 
 .card-container2 {
-    margin-left: auto;
+  margin-left: auto;
 }
 @media (min-width: 368px) {
-    .card-container {
-        width: 85%;
-        margin-bottom: 20px;
-    }
+  .card-container {
+    width: 85%;
+    margin-bottom: 20px;
+  }
 }
 
 @media (min-width: 768px) {
-    .play-train-cards {
-        flex-direction: row;
-    }
-    .card-container {
-        width: 34%;
-        margin-bottom: 0px
-    }
-    .card-container2 {
-        margin-left: initial;
-    }
+  .play-train-cards {
+    flex-direction: row;
+  }
+  .card-container {
+    width: 34%;
+    margin-bottom: 0px;
+  }
+  .card-container2 {
+    margin-left: initial;
+  }
 }
 
 .card {
-    position: relative;
-    width: 100%;
-    height: 450px;
-    background: $gray;
-    overflow: hidden;
-    border: 2px solid rgba($light, .5);
+  position: relative;
+  width: 100%;
+  height: 450px;
+  background: $gray;
+  overflow: hidden;
+  border: 2px solid rgba($light, 0.5);
 }
 .card-container:not(.popupOpened) .card:hover {
-    border: 2px solid rgba($light, .75);
-    box-shadow: 5px 2px 25px 10px rgba($light, .07);
+  border: 2px solid rgba($light, 0.75);
+  box-shadow: 5px 2px 25px 10px rgba($light, 0.07);
 }
-.card1, .card3 {
-    border-radius: 0 35px 35px 0;
+.card1,
+.card3 {
+  border-radius: 0 35px 35px 0;
 }
 .card2 {
-    border-radius: 35px 0 0 35px;
+  border-radius: 35px 0 0 35px;
 }
 
 @media (min-width: 768px) {
-    .card1 {
-        border-radius: 35px 0 0 35px;
-    }
-    .card2 {
-        border-radius: 0 0 0 0;
-    }
+  .card1 {
+    border-radius: 35px 0 0 35px;
+  }
+  .card2 {
+    border-radius: 0 0 0 0;
+  }
 }
 
 .card:before {
-    content: '';
-    position: absolute;
-    top: -50px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: $secondary;
-    clip-path: circle(51% at 50% 0%);
-    transition: all 0.5s ease-in-out;
-    opacity: .5;
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: -50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $secondary;
+  clip-path: circle(51% at 50% 0%);
+  transition: all 0.5s ease-in-out;
+  opacity: 0.5;
+  z-index: 1;
 }
-  
+
 .card-container:not(.popupOpened) .card:hover:before {
-    clip-path: circle(300px at 80% -20%);
-    opacity: .8;
+  clip-path: circle(300px at 80% -20%);
+  opacity: 0.8;
 }
 .card::after {
-    position: absolute;
-    top: 38%;
-    left: -11%;
-    font-size: 7em;
-    font-weight: 800;
-    font-style: italic;
-    color: rgba(255,255,25,0.02);
+  position: absolute;
+  top: 38%;
+  left: -11%;
+  font-size: 7em;
+  font-weight: 800;
+  font-style: italic;
+  color: rgba(255, 255, 25, 0.02);
 }
 .card1::after {
-    content: 'Play';
-    left: -5%;
+  content: "Play";
+  left: -5%;
 }
 .card2::after {
-    content: 'Compete';
+  content: "Compete";
 }
 .card3::after {
-    content: 'Improve';
+  content: "Improve";
 }
 .card-container .card .imgBx {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10000;
-    width: 100%;
-    height: 220px;
-    transition: 0.5s;
-    pointer-events: none;
-  }
-  
-.card-container:not(.popupOpened) .card:hover .imgBx {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10000;
+  width: 100%;
+  height: 220px;
+  transition: 0.5s;
+  pointer-events: none;
+
+  @media ($laptop-max) {
     top: 5%;
     transform: translateY(0%);
-      
   }
-  
+}
+
+@media ($laptop) {
+  .card-container:not(.popupOpened) .card:hover .imgBx {
+    top: 5%;
+    transform: translateY(0%);
+  }
+}
+
 .card .imgBx img {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    filter:  brightness(0) invert(1);
-    width: 50%;
-    max-width: 175px;
-    transition: all .5s ease-in-out;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  filter: brightness(0) invert(1);
+  width: 50%;
+  max-width: 175px;
+  transition: all 0.5s ease-in-out;
 }
 
 .card1 .imgBx img {
-    max-width: 165px;
-    margin-left: 10px;
+  max-width: 165px;
+  margin-left: 10px;
 }
 
 .card-container .card .contentBx {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    transition: 1s;
-    z-index: 10;
-}
-  
-.card-container:not(.popupOpened) .card:hover .contentBx {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  transition: 1s;
+  z-index: 10;
+
+  @media ($laptop-max) {
     height: 200px;
+  }
 }
-  
+
+@media ($laptop) {
+  .card-container:not(.popupOpened) .card:hover .contentBx {
+    height: 200px;
+  }
+}
+
 .card-container .card .contentBx h3 {
-    position: relative;
-    font-weight: 600;
-    letter-spacing: 1px;
-    color: #fff;
-    margin: 0;
-    font-size: 38px;
+  position: relative;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #fff;
+  margin: 0;
+  font-size: 38px;
 }
 @media (min-width: 992px) {
-    .card-container .card .contentBx h3 {
-        font-size: 45px;
-    }
+  .card-container .card .contentBx h3 {
+    font-size: 45px;
+  }
 }
-  
-.card-container .card .contentBx .size, .card-container .card .contentBx .color {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 8px 20px;
-    transition: 0.5s;
-    opacity: 0;
-    visibility: hidden;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-  
+
+.card-container .card .contentBx .size,
+.card-container .card .contentBx .color {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 8px 20px;
+  transition: 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .card-container .card:hover .contentBx .size {
-    opacity: 1;
-    visibility: visible;
-    transition-delay: 0.3s;
-  }
-  
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0.3s;
+}
+
 .card-container .card:hover .contentBx .color {
-    opacity: 1;
-    visibility: visible;
-    transition-delay: 0.4s;
-  }
-  
-.card-container .card .contentBx .size h3, .container .card .contentBx .color h3 {
-    color: #fff;
-    font-weight: 300;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-right: 10px;
-  }
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0.4s;
+}
+
+.card-container .card .contentBx .size h3,
+.container .card .contentBx .color h3 {
+  color: #fff;
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-right: 10px;
+}
 
 .card .contentBx .card-btn {
-    display: inline-block;
-    margin-top: 10px;
-    text-decoration: none;
-    font-weight: 600;
-    opacity: 0;
-    transform: translateY(50px);
-    transition: .5s;
-    margin-top: 50px;
-}
-.card:hover .contentBx .card-btn {
+  display: inline-block;
+  margin-top: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: 0.5s;
+  margin-top: 50px;
+
+  @media ($laptop-max) {
     opacity: 1;
     transform: translateY(0px);
     transition-delay: 0.5s;
     transition-property: transform, opacity;
-}
-.card .contentBx .gt-btn {
-    padding: 10px 20px;
-    background-color: $secondary-light;
-    box-shadow: 0px 4px $secondary-light-shadow;
-    border: 2px solid $secondary-light;
-    border-radius: 4px;
-    transition: all .2s ease;
-}
-.card .contentBx .gt-btn:hover {
-    box-shadow: 0px 0px transparent;
-    transform: translateY(4px);
-    background-color: $primary;
-    border: 2px solid $secondary-light;
-    color: $light;
-    opacity: .6;
-}
-.card .contentBx .gt-btn a {
-    color: white;
-}
-.card .contentBx .gt-btn:hover a {
-    color: rgba($light, .6);
-}
-.card:hover .contentBx .gt-btn {
-    transition: background-color .3s, color .3s, box-shadow .3s, transform .3s;
+  }
 }
 
+@media ($laptop) {
+  .card:hover .contentBx .card-btn {
+    opacity: 1;
+    transform: translateY(0px);
+    transition-delay: 0.5s;
+    transition-property: transform, opacity;
+  }
+}
+
+.card .contentBx .gt-btn {
+  padding: 10px 20px;
+  background-color: $secondary-light;
+  box-shadow: 0px 4px $secondary-light-shadow;
+  border: 2px solid $secondary-light;
+  border-radius: 4px;
+  transition: all 0.2s ease;
+}
+.card .contentBx .gt-btn:hover {
+  box-shadow: 0px 0px transparent;
+  transform: translateY(4px);
+  background-color: $primary;
+  border: 2px solid $secondary-light;
+  color: $light;
+  opacity: 0.6;
+}
+.card .contentBx .gt-btn a {
+  color: white;
+}
+.card .contentBx .gt-btn:hover a {
+  color: rgba($light, 0.6);
+}
+.card:hover .contentBx .gt-btn {
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s, transform 0.3s;
+}
 
 /* MODALS */
 
 /* Popup container */
 .popup {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    opacity: 1;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  opacity: 1;
 
-    .popuptext {
-        opacity: 0;
-        width: 100%;
-        height: 450px;
-        border: 2px solid rgba($light, .4);
-        background-color: $gray;
-        color: $light;
-        text-align: center;
-        padding: 8px 0;
-        position: absolute;
-        z-index: 10000000;
-        bottom: 50%;
-        left: 50%;
-        transform: translate(-50%, 50%);
-        transition: opacity .3s ease-in-out;
-        pointer-events: none;
-        overflow: hidden;
-    
-        h3 {
-            font-size: 2.5rem;
-            margin: 20px;
-            font-family: $primary-font;
-        }
-    
-        p {
-            text-align: left;
-            padding: 20px 30px;
-        }
-    
-        ul {
-            text-align: left;
-            font-size: 1.2rem;
-            padding: 0 10px 0 30px;
-            list-style-type: square;
-        
-            @media ($mobile-large) {
-                font-size: 1.4rem;
-                padding: 0 20px 0 40px;
-            }
-        
-            @media ($tablet) {
-                font-size: 1rem;
-            }
-        
-            @media (min-width: 848px) {
-                font-size: 1.1rem;
-            }
-        
-            @media ($laptop) {
-                font-size: 1.2rem;
-            }
-        
-            @media (min-width: 1400px) {
-                font-size: 1.4rem;
-            }
-        
-            @media (min-width: 1600px) {
-                font-size: 1.5rem;
-            }
-        }
-    
-        li {
-            margin: 10px 0;
-        }
+  .popuptext {
+    opacity: 0;
+    width: 100%;
+    height: 450px;
+    border: 2px solid rgba($light, 0.4);
+    background-color: $gray;
+    color: $light;
+    text-align: center;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 10000000;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    transition: opacity 0.3s ease-in-out;
+    pointer-events: none;
+    overflow: hidden;
+
+    h3 {
+      font-size: 2.5rem;
+      margin: 20px;
+      font-family: $primary-font;
     }
 
-    .show {
-        opacity: .98;
-        transition: opacity .3s ease-in-out;
+    p {
+      text-align: left;
+      padding: 20px 30px;
     }
+
+    ul {
+      text-align: left;
+      font-size: 1.2rem;
+      padding: 0 10px 0 30px;
+      list-style-type: square;
+
+      @media ($mobile-large) {
+        font-size: 1.4rem;
+        padding: 0 20px 0 40px;
+      }
+
+      @media ($tablet) {
+        font-size: 1rem;
+      }
+
+      @media (min-width: 848px) {
+        font-size: 1.1rem;
+      }
+
+      @media ($laptop) {
+        font-size: 1.2rem;
+      }
+
+      @media (min-width: 1400px) {
+        font-size: 1.4rem;
+      }
+
+      @media (min-width: 1600px) {
+        font-size: 1.5rem;
+      }
+    }
+
+    li {
+      margin: 10px 0;
+    }
+  }
+
+  .show {
+    opacity: 0.98;
+    transition: opacity 0.3s ease-in-out;
+  }
 }
 
-
 .popupOpened .card {
-    border: 2px solid rgba($light, .75);
-    // box-shadow: 5px 2px 25px 10px rgba($light, .7);
+  border: 2px solid rgba($light, 0.75);
+  // box-shadow: 5px 2px 25px 10px rgba($light, .7);
 }
 /* Toggle this class when clicking on the popup container (hide and show the popup) */
 
-
 @media (max-width: 767px) {
-    .card-container1 .popuptext, .card-container3 .popuptext {
-        border-radius:0 35px 35px 0;
-    }
-    
-    .card-container2 .popuptext {
-        border-radius: 35px 0 0 35px;
-    }
+  .card-container1 .popuptext,
+  .card-container3 .popuptext {
+    border-radius: 0 35px 35px 0;
+  }
+
+  .card-container2 .popuptext {
+    border-radius: 35px 0 0 35px;
+  }
 }
 
 @media (min-width: 768px) {
-    .card-container1 .popuptext {
-        border-radius: 35px 0 0 35px;
-    }
-    
-    .card-container3 .popuptext {
-        border-radius: 0 35px 35px 0;
-    }
+  .card-container1 .popuptext {
+    border-radius: 35px 0 0 35px;
+  }
+
+  .card-container3 .popuptext {
+    border-radius: 0 35px 35px 0;
+  }
 }
 
-
 .pt-cards .scroll-content {
-    transition-delay: .3s;
-  }
+  transition-delay: 0.3s;
+}
