--- a/src/scss/home-sections/_play-train-cards.scss
+++ b/src/scss/home-sections/_play-train-cards.scss
@@ -293,6 +293,11 @@
     pointer-events: none;
     overflow: hidden;
 
+    &.popupOpened {
+      opacity: .98;
+      transition: opacity 0.3s ease-in-out;
+    }
+
     h3 {
       font-size: 2.5rem;
       margin: 20px;
